# ai-ba

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_models.py  002_chat_doctype_audit.py  003_project_chat_phase.py  004_project_requirements_summary.py
app/: main.py  worker.py
app/api/routes/: artifacts.py  auth.py  chat.py  config.py  document_types.py  graph.py  graph_edit.py  health.py  nodes.py  projects.py  stream.py
app/core/: config.py  exceptions.py  llm_config.py  middleware.py  security.py  ui_config.py
app/engine/: instantiate.py  orchestrator.py  resolver.py  state.py
app/models/: __init__.py  artifact.py  audit_log.py  chat.py  database.py  document_type.py  project.py  user.py  workflow_node.py
app/services/: audit_service.py  chat_service.py  document_type_service.py  event_bus.py  graph_builder_service.py  llm_gateway.py  node_service.py  project_service.py  prompt_engine.py  sandbox.py  storage.py
app/tasks/: workflow_tasks.py
frontend/: package-lock.json  package.json
frontend/e2e/: full-workflow.spec.ts  node-interactions.spec.ts  project-crud.spec.ts
scripts/: seed_document_types.py
tests/: conftest.py
tests/integration/: conftest.py  test_chat_flow.py  test_chat_to_graph.py  test_graph_editing.py  test_hitl_flow.py  test_workflow_e2e.py
tests/unit/: test_all_templates.py  test_handlers.py  test_llm_config.py  test_node_service.py  test_prompt_engine.py  test_sandbox.py  test_security.py  test_templates.py
(+110 files in other folders)
